--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
         "build": "encore production --progress"
     },
     "dependencies": {
+        "@popperjs/core": "^2.11.8",
         "autoprefixer": "^10.4.16",
+        "bootstrap": "^5.3.2",
         "postcss-loader": "^7.3.3"
     }
 }
