--- a/composer.json
+++ b/composer.json
@@ -41,6 +41,7 @@
         "symfony/webpack-encore-bundle": "^1.17",
         "symfony/yaml": "6.1.*",
         "twig/extra-bundle": "^2.12|^3.0",
+        "twig/string-extra": "^3.7",
         "twig/twig": "^2.12|^3.0"
     },
     "require-dev": {
